Refactored new solution to pass Extension One and Two